--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
   language: python
   python:
     - "3.5"
+  install:
+    - pip install -r requirements.txt
+    - pip install codecov
   script:
     - pytest
+    - coverage run -m pytest
+  after_success:
+    - codecov
